# payment-portal

./: .gitignore  README.md  docker-compose.yml  normalize_csv.py  pyproject.toml
app/: config.py  main.py  utils.py
app/models/: payment.py
app/routers/: payments.py
deploy/dockerfiles/: Dockerfile
frontend/: angular.json  environment.ts  package-lock.json  package.json
frontend/src/: index.html  styles.scss
frontend/src/app/: app.component.html  app.component.scss  app.component.ts  app.config.ts  payments.service.ts
scripts/: launch.sh  launch_prod.sh
